syntax = "proto3";

package com.dongbawen.proto;

option java_package = "com.dongbawen.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService {
    rpc GetRealNameByUsername(MyRequest) returns (MyResponse){}
    rpc GetSomeListByUsernames(stream MyRequest ) returns( MyResponseList ) {}
    rpc GetSomeStream(MyRequest) returns (stream MyResponse) {}
    rpc GetSomeStreamByStream(stream MyRequest ) returns(stream MyResponse ) {}
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 2;
}

message MyResponseList {
    repeated MyResponse list = 1;
}